--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Professional Portfolio</title>
@@ -16,6 +16,7 @@
       * {
         font-family: "Roboto", sans-serif;
         margin: 0;
+        overflow-x: hidden;
       }
     </style>
   </head>
